Vorlage LaTex einfügen

--- a/Dokumentation/LaTex/Titelseiten.tex
+++ b/Dokumentation/LaTex/Titelseiten.tex
@@ -31,7 +31,8 @@
 %
 %
 
-    {\Large TITEL} \\                 
+    {\Large Implementierung und Evaluation eines Importalgorithmus sowie einer graphischen Oberfläche für hochdimensionale medizinische Daten in MySQL
+} \\                 
 
     \bigskip
     \bigskip \bigskip \bigskip \bigskip
@@ -43,7 +44,7 @@
 % NAME DES STUDENTEN (auf Titelblatt)
 %
 %
-    {\Large \bf   BEARBEITER}   
+    {\Large \bf   Michael Schäfferer}   
 
   \end{center}
 
